<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">Study Buddies</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="CreateGroup">Create Group</string>
    <string name="ExistingGroup">Join Group</string>
    <string name="title_activity_create_group">CreateGroup</string>
    <string name="group_name">Group Name</string>
    <string name="member_name">Member Name</string>
    <string name="course_name">Course</string>
    <string name="education_level">Ed. Level</string>
    <string name="button_Submit">Submit</string>
    <string name="title_activity_add_members">Add Members</string>

    <string name="member_name_search">Name Search</string>
    <string name="button_search">Search</string>
    <string name="title_activity_existing_group">Existing Group</string>
    <string name="title_activity_add_member">Add Member</string>
    <string name="title_activity_member_row">member_row</string>
    <string name="email">E-mail</string>
    <string name="add_member">Add Member</string>
    <string name="scheduleAMeet">Schedule A Meet</string>
    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_web_view">WebView</string>
    <string name="title_activity_group_details">GroupDetails</string>
    <string name="title_activity_members">Members</string>
</resources>
