
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/txtwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Welcome"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtwelcome"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/creategroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateGroup"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/meetings"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/existinggroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ExistingGroup"
        android:layout_below="@+id/myGroups"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LogoutBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/existinggroup"
        android:layout_alignEnd="@+id/existinggroup" />

    <Button
        android:id="@+id/meetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scheduled Meetings"
        android:layout_alignBottom="@+id/logout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myGroups"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/creategroup"
        android:layout_below="@+id/txtuser" />

</RelativeLayout>