

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_name"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true" />

    <EditText android:id="@+id/member_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/search_button"
        android:layout_toStartOf="@+id/search_button"
        android:layout_below="@+id/textView"
        android:layout_marginBottom="15dp" />

    <Button android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_search"
        android:layout_alignBottom="@+id/member_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <ListView
        android:id="@+id/member_list"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/add_member"
        android:layout_below="@+id/member_name"
        android:choiceMode="singleChoice"
        android:listSelector="#666666">
        </ListView>

    <Button
        android:id="@+id/add_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_member"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/scheduleAMeet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheduleAMeet"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/search_button"
        android:layout_alignEnd="@+id/search_button" />

</RelativeLayout>